--- a/generator/templates/generator/password.html
+++ b/generator/templates/generator/password.html
@@ -1,1 +1,7 @@
-<h1>Password</h1>
+<h1>Password generado</h1>
+
+<div class="card" style="width: 18rem;">
+  <div class="card-body">
+    <h5 class="card-title">{{ password }}</h5>
+  </div>
+</div>
